Outputs/out_par2.txt
laplace_MPI2.c: En la función ‘main’:
laplace_MPI2.c:82:24: error: expected ‘;’ before ‘}’ token
     else {extension = 2}
                        ^
                        ;
laplace_MPI2.c:132:13: error: la etiqueta de `case' no se reduce a una constante entera
             case nproc-1:
             ^~~~
laplace_MPI2.c:169:19: error: tipo incompatible para el argumento 1 de ‘MPI_Bcast’
         MPI_Bcast(error, 1, MPI_FLOAT, 0, MPI_COMM_WORLD);
                   ^~~~~
In file included from laplace_MPI2.c:5:
/usr/include/openmpi-x86_64/mpi.h:1345:36: nota: se esperaba ‘void *’ pero el argumento es de tipo ‘float’
 OMPI_DECLSPEC  int MPI_Bcast(void *buffer, int count, MPI_Datatype datatype,
                              ~~~~~~^~~~~~
Jacobi relaxation Calculation: 4096 rows x 4096 columns mesh, maximum of 100 iterations
   10, 0.167001
   20, 0.111689
   30, 0.090264
   40, 0.077496
   50, 0.069659
   60, 0.063297
   70, 0.058827
   80, 0.054944
   90, 0.051828
  100, 0.049203
Finished calculation! Time: 53.913105smpirun: Forwarding signal 18 to job
slurmstepd: error: *** JOB 241590 ON clus01 CANCELLED AT 2024-06-06T15:27:57 ***
